// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchBar > should render correctly 1`] = `
<div>
  <div
    class="MuiStack-root ring-search-bar css-1gdsz2q-MuiStack-root"
  >
    <div
      class="MuiStack-root ring-search-box css-1uy5nul-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1x30ntt-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
        />
      </svg>
      <div
        class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-nlitp9-MuiInputBase-root-MuiInput-root"
      >
        <input
          class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
          placeholder="Test Placeholder"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiStack-root ring-search-bar-children-stack css-1sos3zc-MuiStack-root"
    />
  </div>
</div>
`;

exports[`SearchBar > should render correctly with sx selector for children stack 1`] = `
<div>
  <div
    class="MuiStack-root ring-search-bar css-1l2wve8-MuiStack-root"
  >
    <div
      class="MuiStack-root ring-search-box css-1uy5nul-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1x30ntt-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
        />
      </svg>
      <div
        class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-nlitp9-MuiInputBase-root-MuiInput-root"
      >
        <input
          class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
          placeholder=""
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="MuiStack-root ring-search-bar-children-stack css-1sos3zc-MuiStack-root"
    >
      <div>
        Test Child
      </div>
      <div>
        Test Child
      </div>
    </div>
  </div>
</div>
`;
